# Fridger

./: .gitignore  Dockerfile  README.md  TODO
fridger-rs/: Cargo.toml  database.sqlite
fridger-rs/src/: auth.rs  data.rs  database.rs  main.rs
fridger-server/: Cargo.toml
fridger-web/: package-lock.json  package.json
fridger-web/public/: index.html
fridger-web/src/: App.vue  main.js  router.js  store.js
fridger-web/src/classes/: Products.js
fridger-web/src/components/: AddGroup.vue  EditGroup.vue  Group.vue  Timer.vue
fridger-web/src/storeModules/: knownProducts.js  storeUtils.js  storedProducts.js
fridger-web/src/views/: AddFood.vue  Home.vue  KnownFood.vue  Login.vue  StoredFood.vue
time-web/: README.md  package.json
time-web/public/: index.html
time-web/src/: App.vue  classes.js  firebase.js  main.js  router.js  store.js
time-web/src/views/: Home.vue  Login.vue
