[package]
name = "fridger-rs"
version = "0.1.0"
authors = ["matthiak00 <matthias.kind@fu-berlin.de>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "1.0"
log="0.4.7"
simple_logger = "1.3.0"
uuid = "0.7.4"
jsonwebtoken = "6"
serde_derive = "1"
serde = "1"


[dependencies.rusqlite]
version = "0.23.0"
features = ["bundled"]